add Match record CR api
